# Autonomous-Exploration-and-Detection

./: README.md
Maps/: challenge.pgm  challenge.yaml  gazebo_map.pgm  gazebo_map.yaml
alert_player/: LICENSE  README.md  package.xml  setup.cfg  setup.py
alert_player/alert_player/: alert_player.py
alert_player/launch/: alert_player.launch.py
m-explore-ros2/explore/config/: params.yaml  params_costmap.yaml
m-explore-ros2/explore/launch/: explore.launch.py
ri_challenge/: package.xml  setup.cfg  setup.py
ri_challenge/launch/: ri_challenge.launch.py
ri_challenge/ri_challenge/: ri_challenge_node.py
yolo_detector/: package.xml  setup.py
yolo_detector/launch/: yolo_detector.launch.py
yolo_detector/yolo_detector/: yolo_node.py
