<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ri_challenge</name>
  <version>0.0.0</version>
  <description>Robotics Intelligence Challenge Package</description>
  <maintainer email="sutd@todo.todo">sutd</maintainer>
  <license>BSD-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_simple_commander</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>yolo_detector</depend>
  <depend>alert_player</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
